2015-01-12 Rajalakshmi Srinivasaraghavan <raji@linux.vnet.ibm.com>

	* src/sphsinglepcqueue.cpp: Correct error messages.
	* src/tests/sphsinglepcqueue_t.c: Likewise.

2015-01-02  Steven Munroe  <sjmunroe@us.ibm.com>

	* configure.ac (SPHDE_SO_VERSION): Change SO version to 1.0.0.
	SPHSinglePCQueue_t requires an incompatible data change.
	* configure: Regenerate.
	* ./doc/libsphde-doxygen-sph.doxy (INPUT): Add
	./src/sphdirectpcqueue.h
	* ./doc/sphmaindox.h: Add common for sphdirectpcqueue.h. Correct
	spelling.
	* ./src/Makefile.am (libsphdeinclude_HEADERS): Add
	sphdirectpcqueue.h.
	Add sphdirectpcqueue_ttt_tt to TESTS.
	* ./src/Makefile.in: Regenerate.
	* ./src/sasatom.h (sas_code_barrier): Define.
	* ./src/sasatom_i386.h (__arch_pause): Define.
	* ./src/sasatom_x86_64.h (__arch_pause): Define.
	* ./src/sasatom_powerpc.h [_ARCH_PWR4]: Define
	__arch_sas_read_barrier as lwsync.  Otherwisw sync.
	* ./src/sasatom_powerpc.h [_ARCH_PWR7]: Define __arch_sas_PPR_low,
	__arch_sas_PPR_medium_low, and __arch_sas_PPR_medium.
	* ./src/sphdirectpcqueue.h: New file.
	* ./src/sphlfentry.h: Correct comment.
	* ./src/sphsinglepcqueue.cpp [__SPHSPCQUEUE_V1]: Defines the data
	struct change (V0 to V1) for for SPHPCQueueHeader. The V1 header
	moves the qhead/qtail pointers to the next cache-line. This reduces
	false sharing between qhead/qtail and the rest of the
	SPHPCQueueHeader.
	(SPHSinglePCQueueInitInternal) [__SASDebugPrint__]: Added debug.
	(SPHSinglePCQueueGetStride): New function.
	(SPHSinglePCQueueAllocStrideDirect): New function.
	(SPHSinglePCQueueAllocStrideDirectSpin): New function.
	(SPHSinglePCQueueAllocStrideDirectSpinPause): New function.
	(SPHSinglePCQueueEntryIsCompleteDirect): New function.
	(SPHSinglePCQueueGetNextCompleteDirectSpin): New function.
	(SPHSinglePCQueueGetNextCompleteDirectSpinPause): New function.
	(SPHSinglePCQueueGetNextCompleteDirect): New function.
	(SPHSinglePCQueueGetNextEntryDirect): New function.